--- a/portfolio.css
+++ b/portfolio.css
@@ -485,3 +485,212 @@ h5 {
 h6 {
     font-size: 16px;
 }
+
+
+@media (max-width: 414px) {
+      
+      h1 {
+          font-size: 34px;
+      }
+
+      #profile_pic {
+          position: relative;
+          right: 14.5em;
+      }
+            
+     h5 {
+        position: relative;
+        right: 11.5em;
+        top: 1em;
+     }
+
+     #theme-options-wrapper {
+        position: relative;
+        right: 14.5em;
+        top: .5em;
+     }
+
+     #settings-note {
+        position: relative;
+        right: 15em;
+        font-size: 14.5px;
+     }
+
+     .right-column {
+        position: relative;
+        right: 14.5em;
+        bottom: 4em;
+     }
+
+     .about-me h3 {
+        /* padding: 26px 0; */
+        text-align: center;
+    }
+
+     .about-me p {
+        padding: 8px 0;
+        text-align: center;
+    }
+
+    .post-wrapper {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        width: 90vw;
+        margin-left: 12px;
+    }
+
+    .post-wrapper > div {
+        width: 354px;
+        margin: 0 10px;
+    }
+
+    h5 {
+       position: relative;
+       right: 0.5em;
+       top: 1em;
+    }
+      
+    .left-column > h5 {
+        text-align: center;
+    margin: 8px 0;
+    position: relative;
+    right: 11em;
+    }
+}
+
+
+@media screen and (max-width: 375px) {
+    
+    h1 {
+        font-size: 34px;
+    }
+
+    #profile_pic {
+        position: relative;
+        right: 9em;
+  }
+    
+    h5 {
+        position: relative;
+        right: 9em;
+        top: 1em;
+    }
+
+    #theme-options-wrapper {
+        position: relative;
+        right: 9.5em;
+        top: .5em;
+     }
+
+    #settings-note {
+        position: relative;
+    right: 6.5em;
+    top: 1em;
+    }
+
+    .right-column {
+        position: relative;
+        right: 9em;
+    }
+
+    .about-me h3 {
+        /* padding: 26px 0; */
+        text-align: center;
+    }
+
+    .about-me p {
+        padding: 8px 0;
+        text-align: center;
+    }
+    
+    .post-wrapper {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        width: 90vw;
+        margin-left: 12px;
+    }
+
+    .post-wrapper > div {
+        width: 354px;
+        margin: 0 10px;
+    }
+
+    h5 {
+        position: relative;
+        right: 7.4em;
+        top: 1em;
+     }
+
+     #settings-note {
+         position: relative;
+         right: 10em;
+         top: 1em;
+     }
+
+     .post-title {
+        color: black;
+        padding: 30px 0;
+        position: relative;
+        left: 0em;
+     }
+
+     #contact-form > h5 {
+        padding: 12px 0;
+        text-align: center;
+        font-size: 14px;
+        position: relative;
+        left: 1xem;
+     }
+
+}
+
+@media (max-width: 393px) {
+    
+    #contact-form > h5 {
+        padding: 12px 0;
+        text-align: center;
+        font-size: 14px;
+        position: relative;
+        left: 1em;
+     }
+}
+
+
+@media (max-width: 360px) {
+    #profile_pic {
+        position: relative;
+        right: 11.5em;
+    }
+
+    .left-column > h5 {
+        position: relative;
+        right: 9em;
+    }
+
+    #theme-options-wrapper {
+        position: relative;
+        right: 11.5em;
+        top: 0.5em;
+    }
+
+    #settings-note {
+        position: relative;
+        right: 12em;
+        top: 1em;
+    }
+
+    #preview {
+        margin-right: 5.5em;
+    }
+
+    .thumbnail {
+        width: 98.5%;
+    }
+
+}
+
+
