--- a/portfolio.css
+++ b/portfolio.css
@@ -435,10 +435,19 @@ ul>li {
     color: black;
 }
 
+.left-column {
+    margin-left: 6em;
+}
 
 @media screen and (max-width:1200px) {
     .main-container {
         width: 95%;
+    }
+}
+
+@media screen and (max-width: 820px) {
+    #preview {
+       margin-left: 8em; 
     }
 }
 
