--- a/portfolio.css
+++ b/portfolio.css
@@ -445,12 +445,6 @@ ul>li {
     }
 }
 
-@media screen and (max-width: 820px) {
-    #preview {
-       margin-left: 8em; 
-    }
-}
-
 @media screen and (max-width:800px) {
     .intro-wrapper {
         grid-template-columns: 1fr 1fr;
@@ -496,210 +490,371 @@ h6 {
 }
 
 
-@media (max-width: 414px) {
-      
-      h1 {
-          font-size: 34px;
-      }
 
-      #profile_pic {
-          position: relative;
-          right: 14.5em;
-      }
-            
-     h5 {
-        position: relative;
-        right: 11.5em;
-        top: 1em;
-     }
-
-     #theme-options-wrapper {
-        position: relative;
-        right: 14.5em;
-        top: .5em;
-     }
-
-     #settings-note {
-        position: relative;
-        right: 15em;
-        font-size: 14.5px;
-     }
-
-     .right-column {
-        position: relative;
-        right: 14.5em;
-        bottom: 4em;
-     }
-
-     .about-me h3 {
-        /* padding: 26px 0; */
-        text-align: center;
-    }
-
-     .about-me p {
-        padding: 8px 0;
-        text-align: center;
-    }
-
-    .post-wrapper {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex-direction: column;
-        width: 90vw;
-        margin-left: 12px;
-    }
-
-    .post-wrapper > div {
-        width: 354px;
-        margin: 0 10px;
-    }
-
-    h5 {
-       position: relative;
-       right: 0.5em;
-       top: 1em;
-    }
-      
-    .left-column > h5 {
-        text-align: center;
-    margin: 8px 0;
-    position: relative;
-    right: 11em;
-    }
-}
+/* MEDIA QUERIES */
 
 
-@media screen and (max-width: 375px) {
-    
-    h1 {
-        font-size: 34px;
-    }
+@media (max-width: 540px) {
 
+    /* PROFILE-PIC */
     #profile_pic {
         position: relative;
-        right: 9em;
-  }
-    
-    h5 {
-        position: relative;
-        right: 9em;
-        top: 1em;
+        right: 6em;
     }
 
-    #theme-options-wrapper {
+    /* PERSONALIZE THEME */
+    .left-column > h5 {
         position: relative;
-        right: 9.5em;
-        top: .5em;
-     }
+        right: 5em;
+    }
+
+    /* THEME BUTTONS */
+    #theme-options-wrapper {
+        display: flex;
+        justify-content: center;
+        position: relative;
+        right: 6em;
+    }
 
     #settings-note {
         position: relative;
-    right: 6.5em;
-    top: 1em;
+        right: 8em;
     }
 
     .right-column {
         position: relative;
-        right: 9em;
+        right: 6em;
+        bottom: 2em;
     }
 
     .about-me h3 {
-        /* padding: 26px 0; */
+        padding: 26px 0;
         text-align: center;
     }
 
-    .about-me p {
-        padding: 8px 0;
-        text-align: center;
-    }
-    
     .post-wrapper {
         display: flex;
         align-items: center;
-        justify-content: center;
-        flex-direction: column;
+        justify-content: space-evenly;
         width: 90vw;
-        margin-left: 12px;
+        flex-direction: column;
     }
 
+    /* BOXES */
+
     .post-wrapper > div {
-        width: 354px;
+        width: 300px;
         margin: 0 10px;
     }
 
-    h5 {
-        position: relative;
-        right: 7.4em;
-        top: 1em;
-     }
-
-     #settings-note {
-         position: relative;
-         right: 10em;
-         top: 1em;
-     }
-
-     .post-title {
-        color: black;
-        padding: 30px 0;
-        position: relative;
-        left: 0em;
-     }
-
-     #contact-form > h5 {
-        padding: 12px 0;
-        text-align: center;
-        font-size: 14px;
-        position: relative;
-        left: 1xem;
-     }
-
-}
-
-@media (max-width: 393px) {
-    
-    #contact-form > h5 {
-        padding: 12px 0;
-        text-align: center;
-        font-size: 14px;
-        position: relative;
-        left: 1em;
-     }
-}
-
-
-@media (max-width: 360px) {
-    #profile_pic {
-        position: relative;
-        right: 11.5em;
+    .greeting-wrapper > h1 {
+        font-size: 40px;
+        font-weight: bold;
     }
 
+}
+
+
+
+
+@media (max-width: 414px) {
+
+    /* PROFILE-PIC */
+    #profile_pic {
+        position: relative;
+        right: 15em;
+    }
+
+    /* PERSONALIZE THEME */
     .left-column > h5 {
+        position: relative;
+        right: 12em;
+    }
+
+    /* THEME BUTTONS */
+    #theme-options-wrapper {
+        display: flex;
+        justify-content: center;
+        position: relative;
+        right: 15em;
+    }
+
+    #settings-note {
+        position: relative;
+        right: 20em;
+    }
+
+    .right-column {
+        position: relative;
+        right: 14.5em;
+        bottom: 2em;
+    }
+
+    .about-me h3 {
+        padding: 26px 0;
+        text-align: center;
+    }
+
+    .post-wrapper {
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        width: 90vw;
+        flex-direction: column;
+    }
+
+    /* BOXES */
+
+    .post-wrapper > div {
+        width: 300px;
+        margin: 0 10px;
+    }
+
+    .greeting-wrapper > h1 {
+        font-size: 31px;
+        font-weight: bold;
+    }
+
+}
+
+
+
+
+@media (max-width: 412px) {
+
+    /* PROFILE-PIC */
+    #profile_pic {
+        position: relative;
+        right: 16em;
+    }
+
+    /* PERSONALIZE THEME */
+    .left-column > h5 {
+        position: relative;
+        right: 12.5em;
+    }
+
+    /* THEME BUTTONS */
+    #theme-options-wrapper {
+        display: flex;
+        justify-content: center;
+        position: relative;
+        right: 15.5em;
+    }
+
+    #settings-note {
+        position: relative;
+        right: 20.5em;
+    }
+
+    .right-column {
+        position: relative;
+        right: 15.3em;
+        bottom: 2em;
+    }
+
+    .about-me h3 {
+        padding: 26px 0;
+        text-align: center;
+    }
+
+    .post-wrapper {
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        width: 90vw;
+        flex-direction: column;
+    }
+
+    /* BOXES */
+
+    .post-wrapper > div {
+        width: 300px;
+        margin: 0 10px;
+    }
+
+    .greeting-wrapper > h1 {
+        font-size: 31px;
+        font-weight: bold;
+    }
+
+}
+
+
+
+
+
+
+@media (max-width: 390px) {
+   
+
+    /* PROFILE-PIC */
+    #profile_pic {
+        position: relative;
+        right: 14em;
+    }
+
+    /* PERSONALIZE THEME */
+    .left-column > h5 {
+        position: relative;
+        right: 11em;
+    }
+
+    /* THEME BUTTONS */
+    #theme-options-wrapper {
+        display: flex;
+        justify-content: center;
+        position: relative;
+        right: 13.8em;
+    }
+    
+    #settings-note {
+        position: relative;
+        right: 18em;
+    }
+
+    .right-column {
+        position: relative;
+        right: 14em;
+        bottom: 2em;
+    }  
+
+    #contact-form > h5 {
+        font-size: 17px;
+    }
+
+}
+
+
+
+
+@media (max-width: 393px) {
+   
+
+    /* PROFILE-PIC */
+    #profile_pic {
+        position: relative;
+        right: 14em;
+    }
+
+    /* PERSONALIZE THEME */
+    .left-column > h5 {
+        position: relative;
+        right: 11em;
+    }
+
+    /* THEME BUTTONS */
+    #theme-options-wrapper {
+        display: flex;
+        justify-content: center;
+        position: relative;
+        right: 13.8em;
+    }
+    
+    #settings-note {
+        position: relative;
+        right: 18em;
+    }
+
+    .right-column {
+        position: relative;
+        right: 14em;
+        bottom: 2em;
+    }  
+
+    #contact-form > h5 {
+        font-size: 17px;
+    }
+
+}
+
+
+
+
+@media (max-width: 375px) {
+    /* PROFILE-PIC */
+    #profile_pic {
         position: relative;
         right: 9em;
     }
 
-    #theme-options-wrapper {
+    /* PERSONALIZE THEME */
+    .left-column > h5 {
         position: relative;
-        right: 11.5em;
-        top: 0.5em;
+        right: 7em;
+    }
+
+    /* THEME BUTTONS */
+    #theme-options-wrapper {
+        display: flex;
+        justify-content: center;
+        position: relative;
+        right: 9em;
     }
 
     #settings-note {
         position: relative;
         right: 12em;
-        top: 1em;
     }
 
-    #preview {
-        margin-right: 5.5em;
+    .right-column {
+        position: relative;
+        right: 9em;
+        bottom: 2em;
     }
 
-    .thumbnail {
-        width: 98.5%;
+    .greeting-wrapper > h1 {
+        font-size: 31px;
+        font-weight: bold;
     }
-
 }
 
 
+
+
+
+
+
+@media (max-width: 360px) {
+    /* PROFILE-PIC */
+    #profile_pic {
+        position: relative;
+        right: 12em;
+    }
+
+    /* PERSONALIZE THEME */
+    .left-column > h5 {
+        position: relative;
+        right: 9.5em;
+    }
+
+    /* THEME BUTTONS */
+    #theme-options-wrapper {
+        display: flex;
+        justify-content: center;
+        position: relative;
+        right: 12em;
+    }
+
+    #settings-note {
+        position: relative;
+        right: 16em;
+    }
+
+    .right-column {
+        position: relative;
+        right: 11.5em;
+        bottom: 2em;
+    }
+
+    .greeting-wrapper > h1 {
+        font-size: 30px;
+        font-weight: bold;
+    }
+
+    #contact-form > h5 {
+        padding: 12px 0;
+        font-size: 15px;
+    } 
+
+}
